--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tree-sitter-d",
-  "version": "0.5.0",
+  "version": "0.6.1"
   "description": "d grammar for tree-sitter",
   "main": "bindings/node",
   "types": "bindings/node",
