Include manpage in published crate
```
$ cargo package --list --allow-dirty | grep difft
difft.1
```

Signed-off-by: Michel Lind <salimma@fedoraproject.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ include = [
         "/vendored_parsers/*-src/**/*.cc",
         "/LICENSE",
         "/README.md",
+        "/difft.1",
 ]
 
 [package.metadata.binstall]
