--- a/package.json
+++ b/package.json
@@ -82,5 +82,5 @@
     "singleQuote": false,
     "semi": true
   },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "npm@10.5.0"
 }
