--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "tree-sitter-elixir",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Elixir grammar for the tree-sitter parsing library",
   "main": "bindings/node",
   "types": "bindings/node",
-  "keywords": ["parser", "lexer", "elixir", "tree-sitter"],
+  "keywords": [
+    "parser",
+    "lexer",
+    "elixir",
+    "tree-sitter"
+  ],
   "files": [
     "grammar.js",
     "binding.gyp",
@@ -19,7 +24,8 @@
     "url": "https://github.com/elixir-lang/tree-sitter-elixir.git"
   },
   "scripts": {
-    "test": "tree-sitter test",
+    "build": "npx tree-sitter-cli generate --no-bindings",
+    "test": "npx tree-sitter-cli test",
     "format": "prettier --trailing-comma es5 --write grammar.js && clang-format -i src/scanner.c",
     "format-check": "prettier --trailing-comma es5 --check grammar.js && cat src/scanner.c | clang-format src/scanner.c | diff src/scanner.c -",
     "install": "node-gyp-build",
@@ -32,7 +38,7 @@
   "devDependencies": {
     "clang-format": "^1.8.0",
     "prettier": "^2.3.2",
-    "tree-sitter-cli": "^0.22.2",
+    "tree-sitter-cli": "^0.23.0",
     "prebuildify": "^6.0.0"
   },
   "peerDependencies": {
