fixes #49 Want tag queries

--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
       ],
       "injections": [
         "queries/injections.scm"
+      ],
+      "tags": [
+        "queries/tags.scm"
       ]
     }
   ]
