--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      # Workaround for https://github.com/nodejs/node-gyp/issues/2219#issuecomment-1359162118
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
       - name: Install Node
         uses: actions/setup-node@v2
         with:
