--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,8 +59,10 @@ mimalloc = { version = "0.1.28", default-features = false }
 # large textual files, as discussed in #297.
 libmimalloc-sys = "=0.1.24"
 radix-heap = "0.4.2"
-# ignore 0.4.19 requires scoped_threads, which was added in rust 1.63.
-ignore = ">= 0.4, < 0.4.19"
+# ignore does not declare a MSRV, but it's part of ripgrep, which has
+# a slightly more aggressive MSRV than difftastic. Constrain ignore to
+# a known-good max version.
+ignore = ">= 0.4, < 0.4.22"
 const_format = "0.2.22"
 owo-colors = "3.5.0"
 wu-diff = "0.1.2"
