--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ typed-arena = "2.0.2"
 rustc-hash = "2.0.0"
 strsim = "0.10.0"
 lazy_static = "1.4.0"
-tree-sitter = "0.22.0"
+tree-sitter = "0.23.0"
 libc = "0.2.108"
 log = "0.4.14"
 pretty_env_logger = "0.5.0"
@@ -76,6 +76,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 line-numbers = "0.3.0"
 smallvec = "1.13.2"
+tree-sitter-language = "0.1.3"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
