--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,7 @@ line-numbers = "0.3.0"
 smallvec = "1.13.2"
 tree-sitter-language = "0.1.3"
 streaming-iterator = "0.1.9"
+tree-sitter-haskell = "0.23.1"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
