--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ tree-sitter-language = "0.1.3"
 streaming-iterator = "0.1.9"
 tree-sitter-haskell = "0.23.1"
 tree-sitter-ruby = "0.23.1"
+tree-sitter-scala = "0.23.3"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
