--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,7 @@ streaming-iterator = "0.1.9"
 tree-sitter-haskell = "0.23.1"
 tree-sitter-ruby = "0.23.1"
 tree-sitter-scala = "0.23.3"
+tree-sitter-objc = "3.0.2"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
