Use tree-sitter-c-sharp from crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ tree-sitter-ruby = "0.23.1"
 tree-sitter-scala = "0.23.3"
 tree-sitter-objc = "3.0.2"
 tree-sitter-ocaml = "0.23.2"
+tree-sitter-c-sharp = "0.23.1"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
