--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,7 @@ tree-sitter-scala = "0.23.3"
 tree-sitter-objc = "3.0.2"
 tree-sitter-ocaml = "0.23.2"
 tree-sitter-c-sharp = "0.23.1"
+tree-sitter-python = "0.23.5"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
