--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,7 @@ tree-sitter-c-sharp = "0.23.1"
 tree-sitter-python = "0.23.5"
 tree-sitter-cpp = "0.23.4"
 tree-sitter-c = "0.23.4"
+tree-sitter-javascript = "0.23.1"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
