Use tree-sitter-go from crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,6 +91,7 @@ tree-sitter-javascript = "0.23.1"
 tree-sitter-typescript = "0.23.2"
 tree-sitter-java = "0.23.4"
 tree-sitter-julia = "0.23.1"
+tree-sitter-go = "0.23.4"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
