--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,7 @@ tree-sitter-typescript = "0.23.2"
 tree-sitter-java = "0.23.4"
 tree-sitter-julia = "0.23.1"
 tree-sitter-go = "0.23.4"
+tree-sitter-bash = "0.23.3"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
