--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,7 @@ tree-sitter-java = "0.23.4"
 tree-sitter-julia = "0.23.1"
 tree-sitter-go = "0.23.4"
 tree-sitter-bash = "0.23.3"
+tree-sitter-php = "0.23.11"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
