Use tree-sitter-css from crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,7 @@ tree-sitter-bash = "0.23.3"
 tree-sitter-php = "0.23.11"
 tree-sitter-json = "0.24.8"
 tree-sitter-html = "0.23.2"
+tree-sitter-css = "0.23.1"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
