--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,6 +97,7 @@ tree-sitter-php = "0.23.11"
 tree-sitter-json = "0.24.8"
 tree-sitter-html = "0.23.2"
 tree-sitter-css = "0.23.1"
+tree-sitter-toml-ng = "0.7.0"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
