--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,8 +61,7 @@ wu-diff = "0.1.2"
 rayon = "1.7.0"
 tree_magic_mini = "3.1.5"
 
-# bumpalo 3.15.x requires rust 1.73.
-bumpalo = ">= 3.11, < 3.15"
+bumpalo = "3.16.0"
 unicode-width = "0.1.9"
 crossterm = { version = "0.27.0", features = ["windows"] }
 glob = "0.3.1"
