--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,7 @@ tree-sitter-css = "0.23.1"
 tree-sitter-toml-ng = "0.7.0"
 tree-sitter-lua = "0.2.0"
 tree-sitter-xml = "0.7.0"
+tree-sitter-make = "1.1.1"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
