--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -15,40 +15,40 @@ jobs:
   build_native_binaries:
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        # Use macos-14 for arm.
+        os: [macos-latest, macos-14, ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
       - run: |
           node --version
           npm --version
           npm ci
       - run: npm test
       - run: npm run prebuild
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           path: prebuilds
-          retention-days: 5
+          retention-days: 1
 
 
   publish_npm:
     needs: build_native_binaries
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
-          registry-url: 'https://registry.npmjs.org'
+          node-version: 20
       - run: |
           node --version
           npm --version
           npm ci
       - run: npm test
-      - uses: actions/download-artifact@v4.1.7
+      - uses: actions/download-artifact@v4
       - run: |
           mv artifact prebuilds
           ls prebuilds
