tree-sitter init --update
manually renamed tree-sitter-godot_resource -> tree-sitter-godot-resource

--- a/package.json
+++ b/package.json
@@ -1,32 +1,58 @@
 {
   "name": "tree-sitter-godot-resource",
   "version": "0.5.0",
-  "description": "tree-sitter parser for godot text resources (tres, tscn)",
-  "main": "bindings/node",
-  "keywords": [
-    "lexer",
-    "parser",
-    "tres",
-    "tscn"
-  ],
-  "author": "Preston Knopp",
+  "description": "Grammar for the Godot game engine's text resource format.",
+  "repository": "https://github.com/prestonknopp/tree-sitter-godot-resource",
   "license": "MIT",
+  "author": {
+    "name": "Preston Knopp"
+  },
+  "main": "bindings/node",
+  "types": "bindings/node",
+  "keywords": [
+    "incremental",
+    "parsing",
+    "tree-sitter",
+    "godot",
+    "tscn",
+    "tres"
+  ],
+  "files": [
+    "grammar.js",
+    "tree-sitter.json",
+    "binding.gyp",
+    "prebuilds/**",
+    "bindings/node/*",
+    "queries/*",
+    "src/**",
+    "*.wasm"
+  ],
   "dependencies": {
-    "nan": "^2.14.2",
-    "node-gyp-build": "^4.6.0"
+    "node-addon-api": "^8.2.1",
+    "node-gyp-build": "^4.8.2"
   },
   "devDependencies": {
-    "prebuildify": "^6.0.0",
-    "prettier": "^3.2.5",
-    "tree-sitter-cli": "^0.20.7"
+    "prebuildify": "^6.0.1",
+    "prettier": "^3.4.2",
+    "tree-sitter-cli": "^0.24.6"
+  },
+  "peerDependencies": {
+    "tree-sitter": "^0.21.1"
+  },
+  "peerDependenciesMeta": {
+    "tree-sitter": {
+      "optional": true
+    }
   },
   "scripts": {
+    "install": "node-gyp-build",
+    "prestart": "tree-sitter build --wasm",
+    "start": "tree-sitter playground",
     "prebuild": "prebuildify --strip -t electron@12.2.3 -t 18.13.0 -t 19.5.0",
     "generate": "tree-sitter --version && tree-sitter generate",
-    "genTest": "tree-sitter --version && tree-sitter generate && tree-sitter test",
-    "test": "tree-sitter --version && tree-sitter test",
+    "genTest": "tree-sitter --version && tree-sitter generate && tree-sitter test && node --test bindings/node/*_test.js",
+    "test": "tree-sitter --version && tree-sitter test && node --test bindings/node/*_test.js",
     "parse": "tree-sitter parse",
-    "format": "prettier -w grammar.js package.json && prettier -w --parser json binding.gyp"
-  },
-  "repository": "https://github.com/PrestonKnopp/tree-sitter-godot-resource.git"
+    "format": "prettier -w grammar.js package.json"
+  }
 }
