--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,27 @@
 [package]
 name = "tree-sitter-godot-resource"
-description = "godot-resource grammar for the tree-sitter parsing library"
-version = "0.0.1"
-keywords = ["incremental", "parsing", "godot-resource"]
-categories = ["parsing", "text-editors"]
-repository = "https://github.com/PrestonKnopp/tree-sitter-godot-resource"
-edition = "2018"
+description = "Grammar for the Godot game engine's resource format."
+version = "0.5.0"
+authors = ["Preston Knopp"]
 license = "MIT"
+readme = "README.md"
+keywords = ["incremental", "parsing", "tree-sitter", "godot-resource"]
+categories = ["parsing", "text-editors"]
+repository = "https://github.com/prestonknopp/tree-sitter-godot-resource"
+edition = "2021"
+autoexamples = false
 
 build = "bindings/rust/build.rs"
-include = [
-  "bindings/rust/*",
-  "grammar.js",
-  "queries/*",
-  "src/*",
-]
+include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]
 
 [lib]
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter = "~0.20"
+tree-sitter-language = "0.1"
 
 [build-dependencies]
-cc = "1.0"
+cc = "1.1.22"
+
+[dev-dependencies]
+tree-sitter = "0.24.6"
