--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,30 +3,22 @@ name: Test
 on:
   push:
     branches: [ master ]
-    
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 20
 
-      - name: Version Information
+      - name: Install Package
         run: |
           node --version
           npm --version
+          npm ci
 
-      - name: Install
-        run: npm install
-      
       - name: Test
         run: npm test
