--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ pkg-fmt = "zip"
 
 [dependencies]
 regex = "1.10.4"
-clap = { version = "4.0.0", features = ["cargo", "env", "wrap_help"] }
+clap = { version = "4.0.0", features = ["cargo", "env", "wrap_help", "string"] }
 itertools = "0.11.0"
 typed-arena = "2.0.2"
 rustc-hash = "2.0.0"
@@ -55,7 +55,6 @@ radix-heap = "0.4.2"
 # a slightly more aggressive MSRV than difftastic. Constrain ignore to
 # a known-good max version.
 ignore = ">= 0.4, < 0.4.24"
-const_format = "0.2.22"
 owo-colors = "3.5.0"
 wu-diff = "0.1.2"
 rayon = "1.7.0"
