Update Nix parser and use the crate from crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,7 @@ tree-sitter-yaml = "0.7.0"
 encoding_rs = "0.8.35"
 tree-sitter-rust = "0.23.2"
 tree-sitter-elixir = "0.3.4"
+tree-sitter-nix = "0.0.2"
 
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
