feat: modernize Rust bindings to use `tree_sitter_language::LanguageFn`
Fixes #38

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,10 @@ include = [
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter = "0.20.1"
+tree-sitter-language = "0.1"
+
+[dev-dependencies]
+tree-sitter = "0.25"
 
 [build-dependencies]
 cc = "1.0"
