Support `proto` diffs using `tree-sitter-proto`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,6 +98,7 @@ tree-sitter-objc = "3.0.2"
 tree-sitter-ocaml = "0.23.2"
 tree-sitter-pascal = "0.10.0"
 tree-sitter-php = "0.23.11"
+tree-sitter-proto = "0.2.0"
 tree-sitter-python = "0.23.5"
 tree-sitter-ruby = "0.23.1"
 tree-sitter-rust-orchard = "0.13.0"
