--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,6 +109,8 @@ tree-sitter-typescript = "0.23.2"
 tree-sitter-xml = "0.7.0"
 tree-sitter-yaml = "0.7.0"
 
+imara-diff = "0.1.8"
+
 [dev-dependencies]
 # assert_cmd 2.0.10 requires predicates 3.
 # TODO: update.
