include dev, opt, peer deps in github test worflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,5 @@ jobs:
           node-version: lts/*
       - run: |
           npm run versions
-          npm ci
+          npm ci --include=dev --include=optional --include=peer
       - run: npm test
