--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "*.wasm"
   ],
   "dependencies": {
-    "node-addon-api": "^8.2.1",
-    "node-gyp-build": "^4.8.2"
+    "node-addon-api": "^8.3.1",
+    "node-gyp-build": "^4.8.4"
   },
   "devDependencies": {
     "prebuildify": "^6.0.1",
-    "prettier": "^3.4.2",
-    "tree-sitter-cli": "^0.24.6"
+    "prettier": "^3.5.3",
+    "tree-sitter-cli": "^0.24.7"
   },
   "peerDependencies": {
     "tree-sitter": "^0.21.1"
@@ -46,13 +46,15 @@
   },
   "scripts": {
     "install": "node-gyp-build",
+    "prebuild": "prebuildify --strip -t electron@34.5.5 -t electron@35.3.0 -t electron@36.2.0 -t v20.19.1 -t v22.15.0 -t v23.11.0 -t v24.0.1",
     "prestart": "tree-sitter build --wasm",
     "start": "tree-sitter playground",
-    "prebuild": "prebuildify --strip -t electron@12.2.3 -t 18.13.0 -t 19.5.0",
-    "generate": "tree-sitter --version && tree-sitter generate",
-    "genTest": "tree-sitter --version && tree-sitter generate && tree-sitter test && node --test bindings/node/*_test.js",
-    "test": "tree-sitter --version && tree-sitter test && node --test bindings/node/*_test.js",
+    "versions": "node --version && npm --version && tree-sitter --version",
+    "test": "tree-sitter test && node --test bindings/node/*_test.js",
+    "generate": "tree-sitter generate",
+    "genTest": "tree-sitter generate && npm test",
     "parse": "tree-sitter parse",
+    "ts": "tree-sitter",
     "format": "prettier -w grammar.js package.json"
   }
 }
