--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,7 @@ tree-sitter-elisp = "1.6.1"
 tree-sitter-elixir = "0.3.4"
 tree-sitter-elm = "5.8.0"
 tree-sitter-erlang = "0.13.0"
+tree-sitter-fish = "3.6.0"
 tree-sitter-fsharp = "0.1.0"
 tree-sitter-gleam = "1.0.0"
 tree-sitter-go = "0.23.4"
