Switch to tree-sitter-rust-orchard
Offers better attachment of attributes and doc comments
and supports newer language constructs.
Closes #35.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,7 +100,7 @@ tree-sitter-pascal = "0.10.0"
 tree-sitter-php = "0.23.11"
 tree-sitter-python = "0.23.5"
 tree-sitter-ruby = "0.23.1"
-tree-sitter-rust = "0.23.2"
+tree-sitter-rust-orchard = "0.13.0"
 tree-sitter-scala = "0.23.3"
 tree-sitter-swift = "0.7.0"
 tree-sitter-toml-ng = "0.7.0"
