--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,6 +105,7 @@ tree-sitter-typescript = "0.23.2"
 tree-sitter-verilog = "1.0.3"
 tree-sitter-xml = "0.7.0"
 tree-sitter-yaml = "0.7.0"
+tree-sitter-zig = "1.1.2"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.6"
