--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,7 +110,7 @@ tree-sitter-xml = "0.7.0"
 tree-sitter-yaml = "0.7.0"
 tree-sitter-zig = "1.1.2"
 
-[target.'cfg(not(target_env = "msvc"))'.dependencies]
+[target.'cfg(not(any(target_env = "msvc", target_os = "illumos")))'.dependencies]
 tikv-jemallocator = "0.6"
 
 [dev-dependencies]
