--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ tree-sitter-language = "0.1.3"
 tree-sitter-bash = "0.23.3"
 tree-sitter-c = "0.23.4"
 tree-sitter-c-sharp = "0.23.1"
+tree-sitter-cmake = "0.7.1"
 tree-sitter-cpp = "0.23.4"
 tree-sitter-css = "0.23.1"
 tree-sitter-elixir = "0.3.4"
