Unvendor tree-sitter-solidity

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,6 +104,7 @@ tree-sitter-python = "0.23.5"
 tree-sitter-ruby = "0.23.1"
 tree-sitter-rust-orchard = "0.13.0"
 tree-sitter-scala = "0.23.3"
+tree-sitter-solidity = "1.2.13"
 tree-sitter-swift = "0.7.0"
 tree-sitter-toml-ng = "0.7.0"
 tree-sitter-typescript = "0.23.2"
