--- a/Cargo.toml
+++ b/Cargo.toml
@@ -102,6 +102,7 @@ tree-sitter-pascal = "0.10.0"
 tree-sitter-php = "0.23.11"
 tree-sitter-proto = "0.2.0"
 tree-sitter-python = "0.23.5"
+tree-sitter-r = "1.2.0"
 tree-sitter-ruby = "0.23.1"
 tree-sitter-rust-orchard = "0.13.0"
 tree-sitter-scala = "0.23.3"
