--- a/Cargo.toml
+++ b/Cargo.toml
@@ -119,10 +119,8 @@ tree-sitter-zig = "1.1.2"
 tikv-jemallocator = "0.6"
 
 [dev-dependencies]
-# assert_cmd 2.0.10 requires predicates 3.
-# TODO: update.
-assert_cmd = ">= 2, < 2.0.9"
-predicates = "2.1.0"
+assert_cmd = "2.0.17"
+predicates = "3.1.3"
 
 pretty_assertions = "1.3.0"
 
