--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ tree-sitter-cmake = "0.7.1"
 tree-sitter-cpp = "0.23.4"
 tree-sitter-css = "0.23.1"
 tree-sitter-dart-orchard = "0.2.1"
+tree-sitter-devicetree = "0.14.1"
 tree-sitter-elixir = "0.3.4"
 tree-sitter-erlang = "0.13.0"
 tree-sitter-fsharp = "0.1.0"
