--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,7 @@ tree-sitter-css = "0.23.1"
 tree-sitter-dart-orchard = "0.2.1"
 tree-sitter-devicetree = "0.14.1"
 tree-sitter-elixir = "0.3.4"
+tree-sitter-elm = "5.8.0"
 tree-sitter-erlang = "0.13.0"
 tree-sitter-fsharp = "0.1.0"
 tree-sitter-go = "0.23.4"
