--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ tree-sitter-elixir = "0.3.4"
 tree-sitter-elm = "5.8.0"
 tree-sitter-erlang = "0.13.0"
 tree-sitter-fsharp = "0.1.0"
+tree-sitter-gleam = "1.0.0"
 tree-sitter-go = "0.23.4"
 tree-sitter-haskell = "0.23.1"
 tree-sitter-hcl = "1.1.0"
