Unvendor tree-sitter-newick
For #891.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,7 @@ tree-sitter-json = "0.24.8"
 tree-sitter-julia = "0.23.1"
 tree-sitter-lua = "0.2.0"
 tree-sitter-make = "1.1.1"
+tree-sitter-newick = "1.1.0"
 tree-sitter-nix = "0.0.2"
 tree-sitter-objc = "3.0.2"
 tree-sitter-ocaml = "0.23.2"
