Unvendor tree-sitter-qmljs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,6 +108,7 @@ tree-sitter-pascal = "0.10.0"
 tree-sitter-php = "0.23.11"
 tree-sitter-proto = "0.2.0"
 tree-sitter-python = "0.23.5"
+tree-sitter-qmljs = "0.3.0"
 tree-sitter-r = "1.2.0"
 tree-sitter-racket = "0.24.7"
 tree-sitter-ruby = "0.23.1"
