Migrate to tree-sitter-sequel
For #891.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,7 @@ tree-sitter-ruby = "0.23.1"
 tree-sitter-rust-orchard = "0.13.0"
 tree-sitter-scala = "0.23.3"
 tree-sitter-scheme = "0.24.7"
+tree-sitter-sequel = "0.3.11"
 tree-sitter-sfapex = "2.4.0"
 tree-sitter-solidity = "1.2.13"
 tree-sitter-swift = "0.7.0"
