--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,6 @@ jobs:
         job:
           # Operating systems available: https://docs.github.com/en/actions/using-github-hosted-runners/using-github-hosted-runners/about-github-hosted-runners#standard-github-hosted-runners-for-public-repositories
           - { target: x86_64-unknown-linux-gnu, os: ubuntu-22.04 }
-          # mac-latest (currently mac-14) is an ARM device, so use macos-13 to get Intel.
-          - { target: x86_64-apple-darwin, os: macos-13 }
           - { target: x86_64-pc-windows-msvc, os: windows-latest }
           - { target: aarch64-pc-windows-msvc, os: windows-11-arm }
 
@@ -21,6 +19,7 @@ jobs:
 
           # mac-14 is an M1 ARM device.
           - { target: aarch64-apple-darwin, os: macos-14 }
+          - { target: x86_64-apple-darwin, os: macos-14, use-cross: true }
 
           - { target: x86_64-unknown-linux-musl, os: ubuntu-22.04, use-cross: true }
     env:
