Unvendor tree-sitter-clojure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ tree-sitter-ada = "0.1.0"
 tree-sitter-bash = "0.23.3"
 tree-sitter-c = "0.23.4"
 tree-sitter-c-sharp = "0.23.1"
+tree-sitter-clojure-orchard = "0.2.0"
 tree-sitter-cmake = "0.7.1"
 tree-sitter-cpp = "0.23.4"
 tree-sitter-css = "0.23.1"
