Unvendor tree-sitter-elisp

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ tree-sitter-cpp = "0.23.4"
 tree-sitter-css = "0.23.1"
 tree-sitter-dart-orchard = "0.2.1"
 tree-sitter-devicetree = "0.14.1"
+tree-sitter-elisp = "1.6.1"
 tree-sitter-elixir = "0.3.4"
 tree-sitter-elm = "5.8.0"
 tree-sitter-erlang = "0.13.0"
