Support wasm-wasip1 target
Co-authored-by: Cetin Sert <cetin@elefunc.com>
Signed-off-by: Master-Hash <hash@hash.moe>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,8 @@ jobs:
           # detects that they need cross).
           - target: x86_64-unknown-linux-musl
             os: ubuntu-22.04
+          - target: wasm32-wasip1
+            os: ubuntu-24.04
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-22.04
           - target: aarch64-pc-windows-msvc
@@ -46,6 +48,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       # v4.2.2
+      - run: |
+          wget https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-29/wasi-sdk-29.0-x86_64-linux.deb
+          sudo apt-get install ./wasi-sdk-29.0-x86_64-linux.deb
+          rm ./wasi-sdk-29.0-x86_64-linux.deb
+          rustup override set stable
+          rustup target add wasm32-wasip1
+        if: ${{ matrix.target == 'wasm32-wasip1' }}
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
@@ -59,6 +68,11 @@ jobs:
         env:
           # (required)
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WASI_SDK_PATH: /opt/wasi-sdk
+          WASI_SYSROOT: /opt/wasi-sdk/share/wasi-sysroot
+          CC_wasm32_wasip1: /opt/wasi-sdk/bin/clang
+          AR_wasm32_wasip1: /opt/wasi-sdk/bin/llvm-ar
+          CFLAGS_wasm32_wasip1: "--sysroot=/opt/wasi-sdk/share/wasi-sysroot"
 
   push_crates_io:
     runs-on: ubuntu-22.04
