--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,6 @@ tree_magic_mini = "3.1.6"
 
 bumpalo = "3.16.0"
 unicode-width = "0.1.9"
-crossterm = { version = "0.28.0", features = ["windows"] }
 glob = "0.3.1"
 strum = { version = "0.26", features = ["derive"] }
 hashbrown = "0.14.0"
@@ -128,7 +127,10 @@ tree-sitter-xml = "0.7.0"
 tree-sitter-yaml = "0.7.0"
 tree-sitter-zig = "1.1.2"
 
-[target.'cfg(not(any(target_env = "msvc", target_os = "illumos", target_os = "freebsd")))'.dependencies]
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+crossterm = { version = "0.28.0", features = ["windows"] }
+
+[target.'cfg(not(any(target_env = "msvc", target_os = "illumos", target_os = "freebsd", target_arch = "wasm32")))'.dependencies]
 tikv-jemallocator = "0.6"
 
 [dev-dependencies]
